2009-04-28  Alexey Proskuryakov  <ap@webkit.org>

        Fix the test for <https://bugs.webkit.org/show_bug.cgi?id=25420> - I broke it when
        experimenting with other aspects of the issue, so it didn't check what it should have checked.

        * http/tests/xmlhttprequest/detaching-frame-2.html:

2009-04-28  David Carson  <dacarson@apple.com>

        Reviewed by David Kilzer.

        Restore alignment to device pixel boundaries.
        https://bugs.webkit.org/show_bug.cgi?id=25458

        Updated test results with progressions.

        * platform/mac/svg/W3C-SVG-1.1/render-groups-03-t-expected.checksum:
        * platform/mac/svg/W3C-SVG-1.1/render-groups-03-t-expected.png:
        Yin-yang image shifted slightly to pixel boundaries.

        * platform/mac/svg/custom/focus-ring-expected.checksum:
        * platform/mac/svg/custom/focus-ring-expected.png:
        Focus rings drawn around rotated "focus text" and checkered
        images shifted slightly to pixel boundaries.

        * platform/mac/svg/custom/image-small-width-height-expected.checksum:
        * platform/mac/svg/custom/image-small-width-height-expected.png:
        Checkered images shifted slightly to pixel boundaries.

2009-04-28  David Kilzer  <ddkilzer@apple.com>

        Added missing pixel test results.

        * platform/mac/fast/css-generated-content/beforeAfter-interdocument-expected.checksum: Added.
        * platform/mac/fast/css-generated-content/beforeAfter-interdocument-expected.png: Added.
        * platform/mac/fast/table/cell-coalescing-expected.checksum: Added.
        * platform/mac/fast/table/cell-coalescing-expected.png: Added.
        * platform/mac/webarchive/adopt-attribute-styled-body-webarchive-expected.checksum: Added.
        * platform/mac/webarchive/adopt-attribute-styled-body-webarchive-expected.png: Added.
        * platform/mac/webarchive/adopt-attribute-styled-node-webarchive-expected.checksum: Added.